@@ -1,5 +1,5 @@
 /* XPM */
-const static char *callcommander_xpm[]={
+const static char *davit_22x22_xpm[]={
 "22 22 132 2",
 "Qt c None",
 ".o c #1d1d1d",
