@@ -881,3 +881,8 @@
 	* Removed the 'DvtFeed' class.
 2025-06-30 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the 'List Providers' dialog in davit(1).
+2025-07-01 Fred Gleason <fredg@paravelsystems.com>
+	* Removed the 'Manage Programs' button from the main menu screen of
+	davit(1).
+	* Removed the 'Import External Data' button from the main menu screen
+	of davit(1).
